--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,7 +1,8 @@
 <IfModule mod_rewrite.c>
     Options -MultiViews
     RewriteEngine On
+    RewriteCond $1 !^(index\.php|resources|robots\.txt)
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteCond %{REQUEST_FILENAME} !-d
-    RewriteRule ^(.*)$ index.php?url=$1 [QSA,L]
+    RewriteRule ^(.+)$ index.php?url=$1 [QSA,L]
 </IfModule>
